--- a/index.html
+++ b/index.html
@@ -42,58 +42,51 @@
 
 
     <!-- Navbar Start -->
-    <div class="container-fluid fixed-top px-0 wow fadeIn" data-wow-delay="0.1s">
-        <div class="top-bar row gx-0 align-items-center d-none d-lg-flex">
-            <div class="col-lg-6 px-5 text-start">
+    <nav class="navbar navbar-expand-lg navbar-light py-lg-0 px-lg-5 sticky-top bg-white">
+        <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
+            <h1 class="display-5 text-primary m-0"><img src="./img/logo-removebg-preview.png"></h1>
+        </a>
+        <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse"
+            data-bs-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="navbar-nav ms-auto p-4 p-lg-0">
+                <a href="#" class="nav-item nav-link active">Home</a>
+                <a href="#about" class="nav-item nav-link">About Us</a>
+                <a href="#service" class="nav-item nav-link">How It Works</a>
+                <a href="" class="nav-item nav-link">Products</a>
+                <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
-            <div class="col-lg-6 px-5 text-end">
-                <small><i class="fa fa-envelope text-primary me-2"></i>info@tspglobal.com</small>
-                <small class="ms-4"><i class="fa fa-phone-alt text-primary me-2"></i>+91 9310880384</small>
+            <div class="d-none d-lg-flex ms-2">
+                <a class="btn btn-light btn-sm-square rounded-circle ms-3" target="_blank" href="https://www.facebook.com/sellurstock?mibextid=ZbWKwL">
+                    <small class="fab fa-facebook-f text-primary"></small>
+                </a>
+                <a class="btn btn-light btn-sm-square rounded-circle ms-3" target="_blank" href="">
+                    <small class="fab fa-twitter text-primary"></small>
+                </a>
+                <a class="btn btn-light btn-sm-square rounded-circle ms-3" target="_blank" href="https://www.instagram.com/sellurstock">
+                    <small class="fab fa-instagram text-primary"></small>
+                </a>
             </div>
         </div>
-
-        <nav class="navbar navbar-expand-lg navbar-light py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
-            <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-                <h1 class="display-5 text-primary m-0"><img src="./img/logo-removebg-preview.png"></h1>
-            </a>
-            <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse"
-                data-bs-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <div class="navbar-nav ms-auto p-4 p-lg-0">
-                    <a href="#" class="nav-item nav-link active">Home</a>
-                    <a href="#about" class="nav-item nav-link">About</a>
-                    <a href="#service" class="nav-item nav-link">How It Works</a>
-                    <a href="" class="nav-item nav-link">My Products</a>
-                    <a href="#contact" class="nav-item nav-link">Contact</a>
-                </div>
-                <div class="d-none d-lg-flex ms-2">
-                    <a class="btn btn-light btn-sm-square rounded-circle ms-3" target="_blank" href="https://www.facebook.com/sellurstock?mibextid=ZbWKwL">
-                        <small class="fab fa-facebook-f text-primary"></small>
-                    </a>
-                    <a class="btn btn-light btn-sm-square rounded-circle ms-3" target="_blank" href="https://www.instagram.com/sellurstock">
-                        <small class="fab fa-instagram text-primary"></small>
-                    </a>
-                </div>
-            </div>
-        </nav>
-    </div>
+    </nav>
+    <!-- Navbar End -->
+    
     <!-- Navbar End -->
 
 
     <!-- Carousel Start -->
-    <div class="container-fluid p-0 mb-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid p-0 mb-5">
         <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img class="w-100" src="./img/pexels-tiger-lily-4481258.jpg" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
-                            <div class="row justify-content-start">
+                            <div class="row justify-content-end">
                                 <div class="col-lg-8">
                                     <h1 class="display-1 mb-4 animated slideInDown">Your Financial Status Is Our Goal</h1>
-                                    <a href="" class="btn btn-primary py-3 px-5 animated slideInDown">Explore More</a>
                                 </div>
                             </div>
                         </div>
@@ -103,10 +96,9 @@
                     <img class="w-100" src="./img/pexels-alexander-isreb-880417-1797428.jpg" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
-                            <div class="row justify-content-start">
+                            <div class="row justify-content-end">
                                 <div class="col-lg-7">
                                     <h1 class="display-1 mb-4 animated slideInDown">True Financial Support For You</h1>
-                                    <a href="" class="btn btn-primary py-3 px-5 animated slideInDown">Explore More</a>
                                 </div>
                             </div>
                         </div>
@@ -136,7 +128,7 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <p class="d-inline-block border rounded text-primary fw-semi-bold py-1 px-3">About Us</p>
                     <h1 class="display-5 mb-4">Transforming Dead Stock into Profitable Opportunities</h1>
-                    <p class="mb-4">we believe that simplicity trumps complexity. Our platform doesn’t rely on elaborate presentations, glossy catalogues, or pushy salespeople. Instead, we focus on providing a pure, streamlined marketplace where distributors, dealers, 
+                    <p class="mb-4">We believe that simplicity trumps complexity. Our platform doesn’t rely on elaborate presentations, glossy catalogues, or pushy salespeople. Instead, we focus on providing a pure, streamlined marketplace where distributors, dealers, 
                         and wholesalers can buy and re-sell dead stock effortlessly. After all, as the saying goes, <strong>“One man’s trash is another man’s treasure.”
                     </p>
                     <div class="border rounded p-4">
@@ -219,12 +211,10 @@
         <div class="container">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <p class="d-inline-block border rounded text-primary fw-semi-bold py-1 px-3">How It Works?</p>
-                    <h1 class="display-5 mb-4">Steps How It Works?</h1>
+                    <h1 class="d-inline-block border rounded text-primary fw-semi-bold py-1 px-3">How It Works?</h1>
                     <p class="mb-4">In today's fast-paced business environment, companies, distributors, wholesalers, and retailers often find themselves burdened
                          with dead stock and slow-moving inventory that continues to accumulate year after year.
                     </p>
-                    <a class="btn btn-primary py-3 px-5" href="">Explore More</a>
                 </div>
                 <div class="col-lg-6">
                     <div class="row g-4 align-items-center">
@@ -235,8 +225,6 @@
                                         <i class="fa fa-check fa-3x text-primary mb-3"></i>
                                         <h4 class="mb-3">Submit Your Stock Details</h4>
                                         <p class="mb-3">Upload the specifics of your dead or slow-moving stock using the link available on the top menu tab.</p>
-                                        <a class="fw-semi-bold" href="">Read More <i
-                                                class="fa fa-arrow-right ms-1"></i></a>
                                     </div>
                                 </div>
                                 <div class="col-12 wow fadeIn" data-wow-delay="0.5s">
@@ -245,8 +233,6 @@
                                         <h4 class="mb-3">Personalized Stock Evaluation</h4>
                                         <p class="mb-3"> Our representative will promptly contact you and, if necessary, 
                                             arrange a personal visit to evaluate your stock.</p>
-                                        <a class="fw-semi-bold" href="">Read More <i
-                                                class="fa fa-arrow-right ms-1"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -256,7 +242,13 @@
                                 <i class="fa fa-check fa-3x text-primary mb-3"></i>
                                 <h4 class="mb-3">Immediate Price and Advance</h4>
                                 <p class="mb-3"> Upon evaluation, we will freeze the price for your entire lot and immediately provide an advance payment, giving you financial assurance right away.</p>
-                                <a class="fw-semi-bold" href="">Read More <i class="fa fa-arrow-right ms-1"></i></a>
+                            </div>
+                            <div class="col-md-12 m-2 wow fadeIn" data-wow-delay="0.7s">
+                                <div class="feature-box border rounded p-4">
+                                    <i class="fa fa-check fa-3x text-primary mb-3"></i>
+                                    <h4 class="mb-3">Defined Delivery Deadlines and Prompt Payment Assurance</h4>
+                                    <p class="mb-3">A time deadline would be defined during which the stocks would be taken delivery from your warehouse and full payment would be done.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -331,7 +323,7 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Our Office</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>I.P. Extension, Delhi - 110092</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 8860777026</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 9310880384</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@tspglobal.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" href=""><i
@@ -354,11 +346,11 @@
                 </div-->
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Quick Links</h4>
+                    <a class="btn btn-link" href="">Home</a>
                     <a class="btn btn-link" href="">About Us</a>
+                    <a class="btn btn-link" href="">How It Works</a>
+                    <a class="btn btn-link" href="">Products</a>
                     <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">Support</a>
                 </div>
             </div>
         </div>
