--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <a class="nav-item nav-link"><button type="button" class="btn-primary1" data-bs-toggle="modal"
                         data-bs-target="#productModal">Add Products</button></a>
                 <a href="products.html" class="nav-item nav-link">Products</a>
-                <a href="#contact" class="nav-item nav-link">Contact</a>
+                <a href="#contact" class="nav-item nav-link">Contact Us</a>
             </div>
             <div class="d-none d-lg-flex ms-2">
                 <a class="btn btn-light btn-sm-square rounded-circle ms-3" target="_blank"
@@ -103,8 +103,7 @@
                         <div class="container">
                             <div class="row justify-content-end">
                                 <div class="col-lg-7">
-                                    <h1 class="mb-4 animated slideInDown">WANT IMMEDIATE ADVANCE PAYMENT FOR SUCH
-                                        STOCKS?</h1>
+                                    <h1 class="mb-4 animated slideInDown">WANT IMMEDIATE ADVANCE PAYMENT FOR DEAD, SLOW or NON MOVING?</h1>
                                     <p class="mb-4 animated slideInDown">Then you are the right place!!</p>
                                 </div>
                             </div>
