--- a/products.html
+++ b/products.html
@@ -140,31 +140,48 @@
     </div>
 </nav>
 <div class="modal fade" id="productModal" tabindex="-1" aria-labelledby="productModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="productModalLabel">Submit a Product</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form id="productForm" action="send_email.php" method="POST" enctype="multipart/form-data">
-                    <div class="mb-3">
-                        <label for="productTitle" class="form-label">Product Title</label>
-                        <input type="text" class="form-control" id="productTitle" name="productTitle" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="productImage" class="form-label">Product Image</label>
-                        <input type="file" class="form-control" id="productImage" name="productImage" accept="image/*" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="productDescription" class="form-label">Product Description</label>
-                        <textarea class="form-control" id="productDescription" name="productDescription" rows="3" required></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Submit Product</button>
-                </form>
-            </div>
-        </div>
-    </div>
+  <div class="modal-dialog">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title" id="productModalLabel">Submit a Product</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+              <form id="productForm" action="https://formsubmit.co/info@tspglobal.com" method="POST" enctype="multipart/form-data">
+                  <div class="mb-3">
+                      <label for="Company Name" class="form-label">Company Name</label>
+                      <input type="text" class="form-control" id="productTitle" name="productTitle" required>
+                  </div>
+                  <div class="mb-3">
+                      <label for="productTitle" class="form-label">Name</label>
+                      <input type="text" class="form-control" id="productTitle" name="productTitle" required>
+                  </div>
+                  <div class="mb-3">
+                      <label for="productTitle" class="form-label">Email Id</label>
+                      <input type="email" class="form-control" id="productTitle" name="productTitle" required>
+                  </div>
+                  <div class="mb-3">
+                      <label for="productTitle" class="form-label">Phone Number</label>
+                      <input type="phone" class="form-control" id="productTitle" name="productTitle" required>
+                  </div>
+                  <div class="mb-3">
+                      <label for="productTitle" class="form-label">Your Designation in the Company</label>
+                      <input type="text" class="form-control" id="productTitle" name="productTitle" required>
+                  </div>
+                  <div class="mb-3">
+                      <label for="productDescription" class="form-label">Stock Description</label>
+                      <textarea class="form-control" id="productDescription" name="productDescription" rows="3"
+                          required></textarea>
+                  </div>
+                  <div class="mb-3">
+                      <label for="productTitle" class="form-label">Stock Quantity</label>
+                      <input type="text" class="form-control" id="productTitle" name="productTitle" required>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Submit Product</button>
+              </form>
+          </div>
+      </div>
+  </div>
 </div>
 <div class="coming">
     <div class="coming-soon-container">
