--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <a class="nav-item nav-link"><button type="button" class="btn-primary1" data-bs-toggle="modal"
                         data-bs-target="#productModal">Add Products</button></a>
                 <a href="products.html" class="nav-item nav-link">Products</a>
-                <a href="#contact" class="nav-item nav-link">Contact</a>
+                <a href="#contact" class="nav-item nav-link">Contact Us</a>
             </div>
             <div class="d-none d-lg-flex ms-2">
                 <a class="btn btn-light btn-sm-square rounded-circle ms-3" target="_blank"
