--- a/index.html
+++ b/index.html
@@ -163,6 +163,10 @@
                             <label for="productTitle" class="form-label">Stock Quantity</label>
                             <input type="text" class="form-control" id="productTitle" name="productTitle" required>
                         </div>
+                         <div class="mb-3">
+                            <label for="productTitle" class="form-label">Your Desired Selling Price (Including Tax)</label>
+                            <input type="number" class="form-control" id="productTitle" name="productTitle" required>
+                        </div>
                         <button type="submit" class="btn btn-primary">Submit Product</button>
                     </form>
                 </div>
