--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 <div class="col-sm-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.3s">
                     <i class="fa fa-check fa-3x text-white mb-3"></i>
                    
-                    <span class="fs-5 text-white">Timely results</span>
+                    <span class="fs-5 text-white">Timely <br> results</span>
                     <hr class="bg-white w-25 mx-auto mb-0">
                 </div>
                 <div class="col-sm-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.5s">
@@ -275,7 +275,7 @@
                 <div class="col-sm-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.7s">
                     <i class="fa fa-award fa-3x text-white mb-3"></i>
                    
-                    <span class="fs-5 text-white">Quality assurance</span>
+                    <span class="fs-5 text-white">Quality <br> assurance</span>
                     <hr class="bg-white w-25 mx-auto mb-0">
                 </div>
             </div>
